--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,5 +1,5 @@
 = semantic_form_for @event, remote: true do |f|
   #error_explanation
   .input-field
-    = f.input :name, "placeholder": "Title"
+    = f.input :name, "placeholder": "Name"
     = f.action :submit, button_html: { class: "btn waves-effect light-blue darken-2" }
