--- a/app/views/feeds/_form.html.haml
+++ b/app/views/feeds/_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for @feed do |f|
+= semantic_form_for @event do |f|
   #error_explanation
   .input-field
   = f.inputs :name => "Basic" do
