--- a/app/views/welcome/test.html.haml
+++ b/app/views/welcome/test.html.haml
@@ -1,17 +1,5 @@
-/ Compiled and minified CSS
+#materialize-lean-overlay.lean-overlay{:style => " display: block; opacity: 0.5;"}
 
-
-%button.btn.modal-trigger{"data-target" => "modal1"} Modal
-/ Modal Structure
-#modal1.modal.modal-fixed-footer
-  .modal-content
-    %h4 Modal Header
-    %p A bunch of text
-  .modal-footer
-    %a.modal-action.modal-close.waves-effect.waves-green.btn-flat{:href => "#!"} Agree
-
-:javascript
-  $(document).ready(function() {
-    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-    $('.modal-trigger').leanModal();
-  });
+#loader
+  .progress.white
+    .indeterminate.white
