--- a/app/views/events/create.js.erb
+++ b/app/views/events/create.js.erb
@@ -1,1 +1,5 @@
-$('#events').append("<%= j render @event %>");
+
+console.log('a')
+console.log($('#events_calendar[data-start-time=<%= @date %>]'))
+
+
