--- a/app/views/events/_calendar.haml
+++ b/app/views/events/_calendar.haml
@@ -1,7 +1,8 @@
 = month_calendar events: events do |date, events|
-  .date
-    = date.day
-  - events.each do |event|
-    = div_for(event, class: 'event') do |event|
-      %span= event.start_time.strftime("%H:%M")
-      = event.name
+  .content{id: date}
+    .date
+      = date.day
+    - events.each do |event|
+      .event
+        %span= event.start_time.strftime("%H:%M")
+        = event.name
