--- a/app/views/events/create.js.erb
+++ b/app/views/events/create.js.erb
@@ -1,5 +1,2 @@
-
-console.log('a')
-console.log($('#events_calendar[data-start-time=<%= @date %>]'))
-
-
+$('#event-modal').closeModal();
+$('#'+'<%= @date %>').replaceWith("<%= j render partial: 'shared/events/day', locals: {events: @events, date: @date}  %>").effect('highlight', {}, 3000);
