--- a/app/views/events/_event_fields.html.haml
+++ b/app/views/events/_event_fields.html.haml
@@ -1,7 +1,8 @@
 .new-field
-  = fields_for "new_events[]", event do |pf|
-    = pf.text_field :name
-    .time-select
-      = pf.time_select(:start_time)
-    .remove-choice{:href => "#", :onclick => "removeEvent($(this))"} X
-  
+= form_tag 'http://farfar.away/form', authenticity_token: 'external_token' do
+  Form contents
+  // = fields_for "new_events[]", event do |pf|
+  // //   = pf.text_field :name
+  // = fields_for "new_events[][start_time]", event do |pf|
+  //   .time-select= pf.time_select(:start_time)  
+  .remove-choice{:href => "#", :onclick => "removeEvent($(this))"} X
