--- a/app/views/events/_calendar.haml
+++ b/app/views/events/_calendar.haml
@@ -6,3 +6,5 @@
       .event
         %span= event.start_time.strftime("%H:%M")
         = event.name
+    %a.btn-floating.red
+      %i.large.material-icons mode_edit
