--- a/app/views/events/_edit_group_event.html.haml
+++ b/app/views/events/_edit_group_event.html.haml
@@ -7,8 +7,8 @@
       #event_fields
         - @events.each do |event|
           = fields_for "events[]", event do |pf|
-            = pf.text_field :name
-            .time-select= pf.time_select(:start_time)
+            .col.m3.time-select= pf.time_select(:start_time)
+            .col.m9.title= pf.text_field :name
   
       = hidden_field_tag 'date', @date
       = submit_tag "Save", id: 'save-event-button'
