Css changes on forms

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -35,11 +35,15 @@
     select { 
       width: initial;
       display: initial;
+      height: 2rem;
+      padding: initial;
     }
   }
   
   .title{
-    padding: 0 0 0 10px;
+    padding: 10px 0;
+    // white-space: nowrap;
+    display: inline
   }
 }
 
