--- a/app/views/events/_edit_group_event.html.haml
+++ b/app/views/events/_edit_group_event.html.haml
@@ -6,9 +6,9 @@
     #event_fields
       - @events.each do |event|
         = fields_for "events[]", event do |pf|
-          .col.m3.time-select= pf.time_select(:start_time)
-          .col.m9.title= pf.text_field :name
+          .time-select= pf.time_select(:start_time)
+          .title= pf.text_field :name
 
     = hidden_field_tag 'date', @date
-    = submit_tag "Save", id: 'save-event-button'
+    = submit_tag "Save", class: 'waves-effect waves-light btn', id: 'save-event-button'
     
