--- a/app/views/events/_edit_group_event.html.haml
+++ b/app/views/events/_edit_group_event.html.haml
@@ -8,8 +8,9 @@
     #event_fields
       - @events.each do |event|
         = fields_for "events[]", event do |pf|
-          .time-select= pf.time_select(:start_time)
-          .title= pf.text_field :name
+          .event-field
+            .time-select= pf.time_select(:start_time)
+            .title= pf.text_field :name
 
     = hidden_field_tag 'date', @date
     = submit_tag "Save", class: 'waves-effect waves-light btn', id: 'save-event-button'
