--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -1,14 +1,15 @@
 .simple-calendar
-  .calendar-heading
-    = link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view
+  .calendar-heading.center-align
     %span.calendar-title
-      = t('date.month_names')[start_date.month]
-      = start_date.year
-    = link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view
+      = link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view, class: 'left month-navigation'
+      .month= t('date.month_names')[start_date.month]
+      = link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: 'right month-navigation'
+    .year= start_date.year
+      
 
   .row.seven-cols
     - date_range.slice(0, 7).each do |day|
-      .col.s1.m1.l1
+      .col.s1.m1.l1.center-align
         %th= t('date.abbr_day_names')[day.wday]
 
   - date_range.each_slice(7) do |week|
