--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -4,6 +4,8 @@
   #events_calendar
     = render partial: "calendar", locals: {events: @events}
   
+  #card-panel.card-panel
+  
   = link_to 'New Event', new_event_path
 
 // -@events.each do |event|
