--- a/app/views/events/fetch_for_edit.js.erb
+++ b/app/views/events/fetch_for_edit.js.erb
@@ -1,1 +1,1 @@
-$('#<%= @date %> .card-panel').html("<%= j render 'edit_group_event', locals: {events: @events} %>").show()
+$('#card-panel').html("<%= j render 'edit_group_event', locals: {events: @events} %>").show()
