Galleries and gallery images added with cloud API

--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -8,6 +8,10 @@
             Events
             %i.material-icons.left today
         %li
+          = link_to galleries_path, class: "" do
+            Galleries
+            %i.material-icons.left camera
+        %li
           = link_to lists_path, class: "" do
             Lists
             %i.material-icons.left list
