Isotope relading images

--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -1,3 +1,13 @@
-.grid-item {
-  padding: 5px 5px;
+.wrapper {
+  padding: 0 100px;
+  
+  &:hover {
+    
+  }
+}
+
+.card-panel {
+  &:hover {
+    
+  }
 }
