--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
     .content
       #modal-holder
       = render "shared/navbar"
+      = render "shared/flash"
       = yield
     .footer
       = render "shared/footer"
