--- a/app/views/galleries/index.html.haml
+++ b/app/views/galleries/index.html.haml
@@ -1,4 +1,7 @@
 .container
+  .row.center-align.header-wrapper
+    %i.material-icons.large.camera-icon camera
+    .header.valign Gallery
   .row
     .col.m4
       .card
