--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -1,13 +1,44 @@
 .wrapper {
   padding: 0 100px;
+}
+
+.header-wrapper {
+  padding-top: 10px;
+
+  .camera-icon {
+    -webkit-animation: rotation 60s infinite linear;
+  }
+
+  @-webkit-keyframes rotation {
+      from {-webkit-transform: rotate(0deg);}
+      to   {-webkit-transform: rotate(359deg);}
+  }
   
-  &:hover {
-    
+
+  .header {
+    padding-bottom: 10px;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 2rem;
+    letter-spacing: 2rem;
+    display: inline-block;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
 
-.card-panel {
-  &:hover {
-    
-  }
+// when :alert, :danger, :error, :validation_errors
+
+.alert, .danger, .error, .validation_errors {
+  background-color: #e91e63;
 }
+.warning, .todo {
+  
+}
+
+.notice, .success {
+  background-color: #4caf50;
+}
+
+// classes += 'alert-info'
