--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -47,11 +47,13 @@
   }
 }
 
-.create-gallery-button {
+.gallery-button-default {
   display: inline-block;
   background-color: white;
   box-shadow: none;
   color: rgba(0, 0, 0, 0.87);
+
+  i { vertical-align: initial; }
   
   &:hover {
     background-color: rgb(33, 33, 33);
