--- a/app/views/galleries/_new.html.haml
+++ b/app/views/galleries/_new.html.haml
@@ -8,8 +8,9 @@
         #hide-whole
           .hide-input
             = f.file_field(:image)
+          #file-name
           .fake-button.btn.waves-effect
             Add
-            = icon 'fa fa-picture-o fa-lg' 
-        = f.submit 'Create', class: 'btn waves-effect right gallery-button-default' 
+            = icon 'fa fa-picture-o fa-lg', id: 'gallery_image-icon'
+        = f.submit 'Create', class: 'btn waves-effect right gallery-button-default', data: { disable_with: "Working..." }
         = f.text_field :title, placeholder: :title
