--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -1,5 +1,5 @@
-.wrapper {
-  padding: 0 100px;
+.gallery-wrapper {
+  margin: 0 2%;
 }
 
 .header-wrapper {
@@ -127,4 +127,9 @@
     box-shadow: none;
     color: white;
   }
+}
+
+.gallery-grid-item, .new-gallery-card {
+  width: 33.33%;
+  padding: 0 1%;
 }
