--- a/app/views/galleries/index.html.haml
+++ b/app/views/galleries/index.html.haml
@@ -1,9 +1,9 @@
-.container
-  .row.center-align.header-wrapper
+.gallery-wrapper
+  .center-align.header-wrapper
     %i.material-icons.large.camera-icon camera
     .header.valign Gallery
-  .row
-    = render 'new'
+  .gallery-grid
+    // = render 'new'
     = render @galleries
               
             
