--- a/app/views/galleries/index.html.haml
+++ b/app/views/galleries/index.html.haml
@@ -3,7 +3,7 @@
     %i.material-icons.large.camera-icon camera
     .header.valign Gallery
   .gallery-grid
-    // = render 'new'
+    = render 'new'
     = render @galleries
               
             
