--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -1,3 +1,7 @@
+body {
+  background: #f1f1f1
+}
+
 .gallery-wrapper {
   margin: 0 2%;
 }
@@ -16,7 +20,7 @@
   
 
   .header {
-    padding-bottom: 10px;
+    padding: 0 0 10px 10px;
     text-transform: uppercase;
     font-weight: 300;
     font-size: 2rem;
