--- a/app/views/galleries/destroy.js.erb
+++ b/app/views/galleries/destroy.js.erb
@@ -1,1 +1,2 @@
 $('.gallery-grid').isotope('remove', $("#gallery_<%= @gallery.id %>")).isotope('layout');
+Materialize.toast('Gallery successfully deleted', 5000, 'notice')
