--- a/app/views/galleries/show.html.haml
+++ b/app/views/galleries/show.html.haml
@@ -1,9 +1,10 @@
-.wrapper
-  = form_for [@gallery, @gallery_image] do |f|
-    = f.file_field(:image)
-    = f.submit
-  = image_tag @gallery.image
-  // .grid
-  //   - @gallery.gallery_images.each do |i|
-  //     - 5.times do
-  //       .grid-item.card-panel.hoverable= image_tag "https://unsplash.it/#{rand(200..350)}/#{rand(200..350)}?random"
+= form_for [@gallery, @gallery_image] do |f|
+  = f.file_field(:image)
+  = f.submit
+
+.gallery-image-grid
+  .gallery-image-grid-sizer
+  // - @gallery.gallery_images.each do |i|
+  -20.times do
+    .gallery-grid-image-item
+      = image_tag "https://unsplash.it/#{rand(400..800)}/#{rand(400..800)}"
