--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -11,3 +11,4 @@ $primary-color: color("blue", "lighten-2") !default;
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "layout";
+@import "galleries";
