--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,4 @@ $primary-color: color("blue", "lighten-2") !default;
 @import "font-awesome";
 @import "layout";
 @import "galleries";
+@import "events";
