Added chocholat lightbox libraries

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@ $primary-color: color("blue", "lighten-2") !default;
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "chocolat";
 @import "layout";
 @import "galleries";
 @import "events";
