--- a/app/views/galleries/show.html.haml
+++ b/app/views/galleries/show.html.haml
@@ -5,6 +5,6 @@
 .gallery-image-grid.chocolat-parent
   .gallery-image-grid-sizer
   - @gallery.gallery_images.order(created_at: :desc).each do |i|
-    .gallery-grid-image-item.chocolat-image
-      = link_to(cl_image_tag i.image) do
-        = cl_image_tag i.image, folder: "Webpage"
+    .gallery-grid-image-item
+      = link_to i.image.url, class: 'chocolat-image' do
+        = cl_image_tag i.image
