--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -3,7 +3,7 @@ body.controller-galleries {
 }
 
 .gallery-wrapper {
-  margin: 0 2%;
+  margin: 0 2% ;
 }
 
 .header-wrapper {
@@ -30,6 +30,10 @@ body.controller-galleries {
     top: 50%;
     transform: translateY(-50%);
   }
+}
+
+#gallery-sorting-line {
+  width: 25%;
 }
 
 .image-upload {
@@ -64,6 +68,16 @@ body.controller-galleries {
   }
   
   &:hover {
+    background-color: rgb(33, 33, 33);
+    box-shadow: none;
+    color: white;
+  }
+}
+
+.transparent {
+  background-color: rgba(0, 0, 0, 0.5);
+  
+   &:hover {
     background-color: rgb(33, 33, 33);
     box-shadow: none;
     color: white;
@@ -131,6 +145,10 @@ body.controller-galleries {
     box-shadow: none;
     color: white;
   }
+}
+
+.gallery-grid {
+  padding-top: 20px;
 }
 
 .gallery-grid-item, .new-gallery-card {
