--- a/app/views/galleries/_gallery.html.haml
+++ b/app/views/galleries/_gallery.html.haml
@@ -12,5 +12,6 @@
         Card Title
         %i.material-icons.right close
       %p Lorem ipsum dolor sit amet, nonummy ligula volutpat hac integer nonummy. Suspendisse ultricies, congue etiam tellus, erat libero, nulla eleifend, mauris pellentesque. Suspendisse integer praesent vel, integer gravida mauris, fringilla vehicula lacinia non
-      = button_to gallery, class: 'gallery-button-default btn waves-effect', method: :delete, data: { confirm: "Are you sure? ALL GALLERY ITEMS WILL BE DELETED!", disable_with: "Please wait..." }, remote: true do
-        = icon('fa fa-trash-o fa-lg')
+      .delete-gallery-button
+        = button_to gallery, class: 'gallery-button-default btn waves-effect', method: :delete, data: { confirm: "Are you sure? ALL GALLERY ITEMS WILL BE DELETED!", disable_with: "Please wait..." }, remote: true do
+          = icon('fa fa-trash-o fa-lg')
